--- a/package.json
+++ b/package.json
@@ -1,119 +1,23 @@
 {
   "name": "moduleA",
   "version": "1.0.0",
-  "license": "MIT",
+  "author": {
+    "name": "Vipul Dhaigude",
+    "email": "vipuldhaigude@gmail.com"
+  },
   "scripts": {
-    "start": "webpack-dev-server --port=4200",
-    "build": "webpack  --env.MODE=prod",
-    "lib-build": "gulp build",
-    "lib-build:watch": "gulp",
-    "lint": "tslint --type-check --project tsconfig.json src/**/*.ts"
+    "refreshVSToken ": "vsts-npm-auth -config .npmrc"
   },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^5.2.11",
-    "@angular/cdk": "^5.2.5",
-    "@angular/common": "^5.2.11",
-    "@angular/compiler": "^5.2.11",
-    "@angular/core": "^5.2.11",
-    "@angular/forms": "^5.2.11",
-    "@angular/http": "^5.2.11",
-    "@angular/material": "^5.2.5",
-    "@angular/platform-browser": "^5.2.11",
-    "@angular/platform-browser-dynamic": "^5.2.11",
-    "@angular/router": "^5.2.11",
-    "@dharapvj/ngx-signalr": "^3.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^1.1.2",
-    "@ngrx/effects": "^5.2.0",
-    "@ngrx/store": "^5.2.0",
-    "@ngrx/store-devtools": "^5.2.0",
-    "@ngtools/webpack": "^1.10.2",
-    "@types/lodash": "^4.14.116",
-    "angular-split": "^1.0.0-rc.3",
-    "angular2-template-loader": "^0.6.2",
-    "awesome-typescript-loader": "^3.5.0",
-    "bootstrap": "^3.3.7",
-    "chart.js": "^2.7.2",
-    "classlist.js": "^1.1.20150312",
-    "core-js": "^2.5.7",
-    "del": "^2.2.2",
-    "file-saver": "^1.3.8",
-    "intl": "^1.2.5",
-    "jquery": "2.2.0",
-    "jquery-mousewheel": "^3.1.13",
-    "jquery-ui": "^1.11.4",
-    "lodash": "^4.17.10",
-    "material-design-icons": "^3.0.1",
-    "moment": "^2.22.2",
-    "ng2-bootstrap-modal": "^1.0.1",
-    "ng2-cache-service": "^1.1.1",
-    "ng2-charts": "^1.6.0",
-    "ng2-cookies": "^1.0.12",
-    "ng2-translate": "^5.0.0",
-    "ngx-toastr": "^8.10.2",
-    "object-assign": "^4.1.1",
-    "run-sequence": "^1.2.2",
-    "rxjs": "^5.5.11",
-    "save-dev": "^2.0.0",
-    "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.26",
-    "sharedmodule":"1.0.0"
-  },
-  "devDependencies": {
-    "@angular-devkit/core": "^0.3.2",
-    "@angular/cli": "1.6.4",
-    "@angular/compiler-cli": "^5.2.11",
-    "@angular/language-service": "^5.2.11",
-    "@compodoc/compodoc": "^1.1.5",
-    "@types/jasmine": "^2.8.8",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.116",
-    "autoprefixer": "^7.2.3",
-    "circular-dependency-plugin": "^4.2.1",
-    "clean-webpack-plugin": "^0.1.19",
-    "codelyzer": "^4.4.4",
-    "copy-webpack-plugin": "^4.5.2",
-    "css-loader": "^0.28.11",
-    "cssnano": "^3.10.0",
-    "exports-loader": "^0.6.3",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.11",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-rename": "^1.4.0",
-    "gulp-rollup": "^2.11.0",
-    "gulp-uglify": "^3.0.1",
-    "html-webpack-plugin": "^2.29.0",
-    "istanbul-instrumenter-loader": "^3.0.1",
-    "jasmine-core": "~2.8.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^2.0.5",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.3",
-    "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.13",
-    "less-loader": "^4.1.0",
-    "node-sass-tilde-importer": "^1.0.2",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.1.6",
-    "postcss-url": "^7.3.2",
-    "protractor": "~5.1.2",
-    "raw-loader": "^0.5.1",
-    "rollup": "^0.41.6",
-    "sass-loader": "^6.0.7",
-    "source-map-loader": "^0.2.4",
-    "style-loader": "^0.13.1",
-    "stylus-loader": "^3.0.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.9.1",
-    "typescript": "~2.5.3",
-    "uglifyjs-webpack-plugin": "^1.3.0",
-    "url-loader": "^0.6.2",
-    "webpack": "~3.10.0",
-    "webpack-dev-server": "~2.9.3"
+  "keywords": [
+    "angular",
+    "tcm-base-module"
+  ],
+  "license": "MIT",
+  "module": "moduleA.js",
+  "typings": "moduleA.d.ts",
+  "peerDependencies": {
+    "@angular/core": "^5.1.0",
+    "rxjs": "^5.1.0",
+    "zone.js": "^0.8.4"
   }
 }
